2012-10-16  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #14652]
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S
	(__condvar_tw_cleanup):  Adjust the mutex data structure if it
	was locked by FUTEX_WAIT_REQUEUE_PI.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait
	(__condvar_w_cleanup): Likewise.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S
	(__condvar_cleanup2): Likewise.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S
	(__condvar_cleanup1): Likewise.

2012-10-10  Carlos O'Donell  <carlos@systemhalted.org>

	* sysdeps/pthread/pthread.h [!(defined __GNUC__ &&
	defined __EXCEPTIONS) && defined __USE_GNU]
	(pthread_cleanup_push_defer_np): Fix formatting.

2012-10-10  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #14652]
	* Makefile (tests): New test case tst-cond25.
	(LDFLAGS-tst-cond25): Link tst-cond25 against librt.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S
	(__condvar_tw_cleanup): Lock mutex only if we don't already
	own it.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S
	(__condvar_w_cleanup): Likewise.
	* sysdeps/unix/sysv/linux/pthread-pi-defines.sym: Add TID_MASK.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S
	(__condvar_cleanup2): Lock mutex only if we don't already
	own it.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S
	(__condvar_cleanup1): Likewise.
	* tst-cond25.c: New test case.

2012-10-09  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/pthread/configure: Regenerated.
	* sysdeps/x86_64/configure: Regenerated.

2012-10-05  David S. Miller  <davem@davemloft.net>

	[BZ #14568]
	* sysdeps/sparc/tls.h (DB_THREAD_SELF_INCLUDE): Delete.
	(DB_THREAD_SELF): Use constants for the register offsets.  Correct
	the case of a 64-bit debugger with a 32-bit inferior.

2012-10-05  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14557]
	* Makefile (tests-static): Add tst-cancel24-static,
	tst-cond8-static tst-mutex8-static, tst-mutexpi8-static,